make app responsive

--- a/src/components/formPage/formPage.styles.css
+++ b/src/components/formPage/formPage.styles.css
@@ -10,3 +10,15 @@
     background-color: #FF3CAC;
     background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
 }
+
+@media only screen and (max-width: 1200px) {
+    .form-page {
+        flex-direction: column;
+    }
+
+    .side-bar {
+        width: 100%;
+        height: 200px;
+        z-index: -1;
+    }
+}
