--- a/src/components/paymentForm/paymentForm.styles.css
+++ b/src/components/paymentForm/paymentForm.styles.css
@@ -85,3 +85,30 @@ button:hover {
         opacity: 1;
     }
 }
+
+@media only screen and (max-width: 1200px) {
+    .credit-card__form-container {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .credit-card {
+        margin-top: 0;
+        margin-left: 0;
+        align-self: center;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .form__bottom {
+        flex-direction: column;
+    }
+
+    .credit-card {
+        min-width: 100%;
+    }
+
+    .credit-card__form-container {
+        padding-bottom: 4rem;
+    }
+}
